--- a/.github/workflows/readme-updater.yaml
+++ b/.github/workflows/readme-updater.yaml
@@ -10,6 +10,9 @@ jobs:
   sync-readme:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Sync readme
         uses: ms-jpq/sync-dockerhub-readme@v1
         with:
