--- a/.github/workflows/readme-updater.yaml
+++ b/.github/workflows/readme-updater.yaml
@@ -1,10 +1,11 @@
-name: Docker Hub readme auto updater
+name: Update docker hub readme
 on:
   push:
     branches:
       - 'main'
     paths:
       - 'README.md'
+      - '.github/workflows/readme-updater.yaml'
 
 jobs:
   sync-readme:
@@ -14,9 +15,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Sync readme
-        uses: ms-jpq/sync-dockerhub-readme@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PAT }}
-          repository: mercxry/mindustry
-          readme: "./README.md"
+            uses: peter-evans/dockerhub-description@v3
+            with:
+              username: ${{ secrets.DOCKER_HUB_USERNAME }}
+              password: ${{ secrets.DOCKER_HUB_PAT }}
+              repository: mercxry/mindustry
